<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lse210085@163.com">root</maintainer>
  <license>CC BY-NC 4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>opencv4</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>cv_bridge</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
